Fix Button on Mobile

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 	background-color:#7d5d3b;
 	border-radius:3px;
 	border:1px solid #54381e;
-	display:inline-grid;
+	display:inline-block;
 	cursor:pointer;
 	color:rgb(255, 239, 219);
   font-family: "Hammersmith One", sans-serif;
